# stoker

./: .gitignore  Cargo.toml  README.md
docs/assets/: stoker-images.cast  stoker-list.cast  stoker-rm.cast  stoker-run.cast
examples/: install_nginx.sh
src/: assets.rs  builder.rs  firecracker.rs  guest.rs  main.rs  network.rs
