[package]
name = "stoker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["stream"] }
futures-util = "0.3.28"
anyhow = "1.0.71"

[target.'cfg(target_os = "linux")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
iptables = "0.6.0"
hyper = { version = "0.14.26", features = ["full"] }
hyperlocal = "0.8.0"
ssh2 = "0.9.4"
libc = "0.2.182"
